Terminal casi funcional